--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "audacity-contador",
   "version": "1.0.0",
-  "description": "Sistema de contadores para el juego AUDACITY",
+  "description": "Sistema de contadores AUDACITY con tiempo real",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -11,19 +11,10 @@
     "express": "^4.18.2",
     "socket.io": "^4.7.2"
   },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
-  },
   "engines": {
     "node": ">=14.0.0"
   },
-  "keywords": [
-    "audacity",
-    "contador",
-    "juego",
-    "websocket",
-    "real-time"
-  ],
+  "keywords": ["audacity", "contadores", "tiempo-real", "websockets"],
   "author": "Alan Canto",
   "license": "MIT"
 }
